--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta name="theme-color" content="#484A65">
-        <meta name="description" content="Demo ">
-        <title>Demo</title>
-
-    </head>
-    <body>
-        <h1>Hello</h1>
-        <script type="module" src="/src/main.ts"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#484A65" />
+    <meta name="description" content="Demo " />
+    <title>Demo</title>
+  </head>
+  <body>
+    <h1>Working 🚏</h1>
+    <script type="module" src="/src/main.ts"></script>
+  </body>
 </html>
