chore: Add wasm audio decoding to audio example

--- a/examples/audio/index.html
+++ b/examples/audio/index.html
@@ -19,5 +19,7 @@
     >
       Select an MP3 audio file to add to a WNFS and play it.
     </div>
+
+    <script type="module" src="./src/index.ts"></script>
   </body>
 </html>
